<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_estimation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gina7793@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <!-- ✅ Python 패키지 빌드 타입 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ✅ 런타임 의존성 (apt 기반으로 통일한 상태 기준) -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- (필요 시) dotenv 쓰면 추가 -->
  <!-- <exec_depend>python3-dotenv</exec_depend> -->
  <exec_depend>python3-dotenv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>